feat(email): add .env file

--- a/.env
+++ b/.env
@@ -1,5 +1,25 @@
+# DB settings
 POSTGRES_HOST=todo-db
 POSTGRES_PORT=5432
 POSTGRES_DB=todo_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
+
+# Email settings
+EMAIL_HOST=smtp.zoho.eu
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=pr.todo.app@zohomail.eu
+EMAIL_HOST_PASSWORD=kXmFMFwiZMMN
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+# EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+
+# IMAP settings
+IMAP_SERVER=imap.zoho.eu
+IMAP_PORT=993
+IMAP_USE_SSL=True
+
+# POP3 settings
+POP3_SERVER=pop.zoho.eu
+POP3_PORT=995
+POP3_USE_SSL=True
